Extension of the Web Application

--- a/Client/src/app/_essentials/forms/text-input/text-input.component.html
+++ b/Client/src/app/_essentials/forms/text-input/text-input.component.html
@@ -1,12 +1,10 @@
-<div class="form-floating text-white">
+<div class="text-white">
     <input class="form-control"
-        id="floating"
         type={{type}}
         [class.is-invalid]="control.touched && ngControl.invalid"
         [class.is_valid]="control.valid"
-        [formControl]="control"
-        placeholder={{label}}>
-    <!--<label for="floating">{{label}}</label>-->
+        [formControl]="control">
+        <!--placeholder={{label}}>-->
     <div class="invalid-feedback" *ngIf="control.errors?.['required']"></div>
     <div class="invalid-feedback" *ngIf="control.errors?.['minlength']">{{label}} must be at least {{control.errors?.['minlength'].requiredLength}} characters.</div>
     <div class="invalid-feedback" *ngIf="control.errors?.['maxlength']">{{label}} must be at most {{control.errors?.['maxlength'].requiredLength}} characters.</div>
