--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -1,45 +1,49 @@
-<p>Please fill up the following form</p>
-<form [formGroup]="registerForm" id="msform" autocomplete="off">
-    <div>
-        <app-text-input [formControl]="$any(registerForm.controls['email'])" [label]="'Email'" [type]="'email'"></app-text-input>
+<div class="d-flex justify-content-center align-items-center vh-100" style="margin-top: 50px;">
+    <div class="card p-4" style="width: 100%; max-width: 400px;">
+        <h3 class="text-center mb-4">Register</h3>
+        <form [formGroup]="registerForm" id="msform" autocomplete="off">
+            <div class="mb-3">
+                <label for="firstname" class="form-label">First Name</label>
+                <app-text-input [formControl]="$any(registerForm.controls['firstname'])" [label]="'First Name'"></app-text-input>
+            </div>
+            <div class="mb-3">
+                <label for="lastname" class="form-label">Last Name</label>
+                <app-text-input [formControl]="$any(registerForm.controls['lastname'])" [label]="'Last Name'"></app-text-input>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <app-text-input [formControl]="$any(registerForm.controls['email'])" [label]="'Email'" [type]="'email'"></app-text-input>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <app-text-input [formControl]="$any(registerForm.controls['password'])" [label]="'Password'" [type]="'password'"></app-text-input>
+            </div>
+            <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
+            </div>
+            <div class="mb-3">
+                <label for="genderSelect" class="form-label">Gender</label>
+                <select id="genderSelect" class="form-select" formControlName="gender" required>
+                    <option value="" disabled selected>Select your gender</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="roleSelect" class="form-label">Role</label>
+                <select id="roleSelect" class="form-select" formControlName="role" required>
+                    <option value="" disabled selected>Select your role</option>
+                    <option value="student">Student</option>
+                    <option value="professor">Professor</option>
+                </select>
+            </div>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary btn-lg btn-block px-4 ms-2" type="submit" (click)="submit()" [disabled]="!registerForm.valid">Sign Up</button>
+            </div>
+        </form>
+        <div class="text-center mt-3">
+            <a href="/login">Already have an account? Login</a>
+        </div>
     </div>
-    <div>
-        <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]="'Username'"></app-text-input>
-    </div>
-    <div>
-        <app-text-input [formControl]="$any(registerForm.controls['password'])" [label]="'Password'" [type]="'password'"></app-text-input>
-    </div>
-    <div>
-        <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
-    </div>
-    <div>
-        <app-text-input [formControl]="$any(registerForm.controls['firstname'])" [label]="'First Name'"></app-text-input>
-    </div>
-    <div>
-        <app-text-input [formControl]="$any(registerForm.controls['lastname'])" [label]="'Last Name'"></app-text-input>
-    </div>
-    <div>
-        <select id="genderSelect" formControlName="gender">
-            <option selected>Male</option>
-            <option>Female</option>
-        </select>
-    </div>
-    <div>
-        <select id="roleSelect" formControlName="role">
-            <option selected>Student</option>
-            <option>Professor</option>
-            <option>Creator</option>
-        </select>
-    </div>
-    <div>
-        <input type="date" id="dateofbirthSelect" formControlName="dateofbirth">
-    </div>
-    <div class="form-check justify-content-center align-items-center mb-4">
-        <input class="form-check-input me-2" type="checkbox" id="checkForRegister">
-        <label class="form-check-label" for="checkForRegister"> I agree to the <a class="text-body"><u>Terms of service</u></a> </label>
-    </div>
-    <div class="text-center mb-2">
-        <button class="btn btn-success btn-lg btn-block px-4 ms-2" type="submit" (click)="submit()" [disabled]="!registerForm.valid">Sign Up</button>
-    </div>
-<p>Form value: {{registerForm.value | json}}</p>
-<p>Form status: {{registerForm.status | json}}</p>
+</div>  
