--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,8 +1,5 @@
-<!--<ngx-spinner type = "pacman">
-    <h3>Loading...</h3>
-</ngx-spinner>
-<app-nav></app-nav>-->
-<div>
+<app-navbar></app-navbar>
+<div style="min-height: 100vh;">
     <router-outlet></router-outlet>
 </div>
-<!--<app-footer></app-footer>-->
+<app-footer></app-footer>
