--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,22 +1,18 @@
-<p>Please enter your email and password</p>
-<form [formGroup]="loginForm" id="msform" autocomplete="off">
-    <div>
-        <app-text-input [formControl]="$any(loginForm.controls['email'])" [label]="'Email'" [type]="'email'"></app-text-input>
+<div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="card p-4" style="width: 100%; max-width: 400px;">
+        <h3 class="text-center mb-4">Login</h3>
+        <form [formGroup]="loginForm" id="msform" autocomplete="off">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <app-text-input [formControl]="$any(loginForm.controls['email'])" [label]="'Email'" [type]="'email'"></app-text-input>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <app-text-input [formControl]="$any(loginForm.controls['password'])" [label]="'Password'" [type]="'password'"></app-text-input>
+            </div>
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn" routerLink="/" (click)="submit()">Sign In</button>
+            </div>
+        </form>
     </div>
-    <div>
-        <app-text-input [formControl]="$any(loginForm.controls['password'])" [label]="'Password'" [type]="'password'"></app-text-input>
-    </div>
-    <button type="submit" (click)="submit()">Sign In</button>
-</form>
-<p>Form value: {{loginForm.value | json}}</p>
-<p>Form status: {{loginForm.status | json}}</p>
-
-<button type="submit" (click)="showUsers()">Show Users</button>
-
-<div>
-    <ul>
-        <li *ngFor="let member of members">
-            {{member.id}} - {{member.userName}} - {{member.email}} - {{member.firstName}} - {{member.lastName}} - {{member.role}}
-        </li>
-    </ul>
-</div>
+</div>  
