Cloudinary Implementation, Download Functionality & Refactoring

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner type = "clockwise">
+    <p style="color: white" > Loading... </p>
+</ngx-spinner>
 <app-navbar></app-navbar>
 <div style="min-height: 100vh;">
     <router-outlet></router-outlet>
