--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                                     you need our build tool. You can find the library<br>
                                     with everything you will ever need through the link<br>
                                     below. Simply import the DLL file into your project.</p>
-        <a href="#" class="tm-color-primary tm-font-semibold">Download</a>
+        <a [href]="fileUrl" download class="tm-color-primary tm-font-semibold">Download</a>
       </article>
       <article class="col-12 col-md-4 col-lg-4 col-xl-4 tm-article py-3">
         <i class="fa-solid fa-gears fa-6x pb-3"></i>
