--- a/Client/src/app/upload/upload.component.html
+++ b/Client/src/app/upload/upload.component.html
@@ -1,28 +1,7 @@
 <div class="container">
-    <div class="upload-area"
-         [class.dragging]="!isUploading && !isProcessing"
-         (drop)="onFileDropped($event)"
-         (dragover)="preventDefault($event)"
-         (dragleave)="preventDefault($event)">
-        <ng-container *ngIf="!isUploading">
-            <ng-container *ngIf="!uploadedFile">
-                <input type="file" hidden #fileInput (change)="onFileSelected($event)" />
-                <p>Drag & Drop</p>
-                <button mat-raised-button color="primary" (click)="fileInput.click()">Select File</button>
-            </ng-container>
-            <ng-container *ngIf="uploadedFile">
-                <p>Uploaded: {{ uploadedFile.name }}</p>
-            </ng-container>
-        </ng-container>
-        <div *ngIf="isUploading" class="progress-overlay">
-            <mat-progress-bar mode="determinate"
-                              [value]="uploadProgress"
-                              class="progress-bar"></mat-progress-bar>
-            <p>Uploading... {{ uploadProgress }}%</p>
-        </div>
-    </div>
+    <!--
     <div *ngIf="uploadedFile && !isProcessing && !isUploading && !downloadLink" class="action-area">
-        <button mat-raised-button color="accent" (click)="generateExams()"> Generate </button>
+        <button mat-raised-button style="background-color: rgb(255, 209, 145);" (click)="generateExams()"> Generate </button>
     </div>
     <div *ngIf="isProcessing" class="progress-area">
         <mat-progress-bar mode="determinate"
@@ -31,10 +10,54 @@
         <p>Generating exams... {{ processingProgress }}%</p>
     </div>
     <div *ngIf="!isProcessing && downloadLink" class="success-area">
-        <button mat-raised-button color="primary" (click)="downloadFile()"> Download </button>
+        <button mat-raised-button style="background-color: rgb(255, 209, 145);" (click)="downloadFile()"> Download </button>
     </div>
     <div *ngIf="!isProcessing && apiErrorMessage" class="error-area">
         <p class="error-message">{{ apiErrorMessage }}</p>
+    </div>-->
+    <div *ngIf="(accountService.currentUser$ | async)">
+        <ng-container *ngIf="!uploadedFile">
+            <div class="upload-area"
+                 (drop)="onFileSelected($event.dataTransfer?.files?.[0] || null)"
+                 (dragover)="preventDefault($event)"
+                 (dragleave)="preventDefault($event)">
+                <ng-container *ngIf="!selectedFile">
+                    <input type="file"
+                           hidden
+                           #fileInput
+                           accept=".dll"
+                           (change)="onFileSelected(fileInput.files?.[0] || null)"/>
+                    <p style="color: darkslategray;">Drag & Drop</p>
+                    <button mat-raised-button style="background-color: rgb(255, 209, 145);" (click)="fileInput.click()">Select File</button>
+                </ng-container>
+                <ng-container *ngIf="selectedFile">
+                    <p>File selected: {{ selectedFile.name }}</p>
+                    <button mat-raised-button style="background-color: rgb(255, 209, 145);" (click)="uploadFile()">Upload File</button>
+                </ng-container>
+            </div>
+        </ng-container>
+        <ng-container *ngIf="uploadedFile">
+            <div class="upload-area">
+                <p>File {{ uploadedFile.name }} successfully uploaded!</p>
+                <button mat-raised-button style="background-color: rgb(255, 209, 145);" (click)="generateExams()">Generate Exams</button>
+            </div>
+        </ng-container>
     </div>
+    <div *ngIf="!(accountService.currentUser$ | async)">
+        <div class="upload-area" style="color:darkslategray;">
+            <h3>In order to use our platform you<br>have to create an account.</h3>
+            <div class="justify-content-center">
+                <button class="btn">
+                    <a class="nav-link" routerLink="/register" routerLinkActive="active">Sign Up</a>
+                </button>
+            </div>
+        </div>
+    </div>
+    <!--
+    <div class="upload-container">
+        <a *ngIf="downloadUrl" [href]="downloadUrl" target="_blank" download>
+          Download File
+        </a>
+    -->
 </div>
   
