Profile Page, Exam Repository, Upload & Execute Exam Functionality

--- a/Client/src/app/_essentials/errors/not-found/not-found.component.html
+++ b/Client/src/app/_essentials/errors/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="card p-4" style="width: 100%; max-width: 400px;">
+        <h1 class="text-center fw-bold mb-2" style="color:darkslategray;">Error 404</h1>
+        <h4 class="text-center fw-bold mb-2" style="color:darkslategray;">Not Found</h4>
+        <br>
+        <button mat-raised-button style="background-color: rgb(255, 209, 145);" class="btn">
+            <a class="nav-link" routerLink="/" routerLinkActive="active">Return to home page</a>
+        </button>
+    </div>
+</div>
