--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                                     you need our build tool. You can find the library<br>
                                     with everything you will ever need through the link<br>
                                     below. Simply import the DLL file into your project.</p>
-        <a [href]="fileUrl" download class="tm-color-primary tm-font-semibold">Download</a>
+        <a [href]="dllUrl" download class="tm-color-primary tm-font-semibold">BuilderTool.dll</a>
       </article>
       <article class="col-12 col-md-4 col-lg-4 col-xl-4 tm-article py-3">
         <i class="fa-solid fa-gears fa-6x pb-3"></i>
@@ -28,6 +28,7 @@
                                     create as many question as you want and also<br>
                                     be able to provide your parameterson how you<br>
                                     want to structure your examination.</p>
+        <a [href]="documentationUrl" download class="tm-color-primary tm-font-semibold">Documentation</a>
       </article>
       <article class="col-12 col-md-4 col-lg-4 col-xl-4 tm-article py-3">
         <i class="fa-solid fa-cloud-arrow-up fa-6x pb-3"></i>
