--- a/Client/src/app/_essentials/forms/text-input/text-input.component.html
+++ b/Client/src/app/_essentials/forms/text-input/text-input.component.html
@@ -3,8 +3,8 @@
         type={{type}}
         [class.is-invalid]="control.touched && ngControl.invalid"
         [class.is_valid]="control.valid"
-        [formControl]="control">
-        <!--placeholder={{label}}>-->
+        [formControl]="control"
+        placeholder={{label}}>
     <div class="invalid-feedback" *ngIf="control.errors?.['required']"></div>
     <div class="invalid-feedback" *ngIf="control.errors?.['minlength']">{{label}} must be at least {{control.errors?.['minlength'].requiredLength}} characters.</div>
     <div class="invalid-feedback" *ngIf="control.errors?.['maxlength']">{{label}} must be at most {{control.errors?.['maxlength'].requiredLength}} characters.</div>
