--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -26,8 +26,8 @@
                 <label for="roleSelect" class="form-label">Role</label>
                 <select id="roleSelect" class="form-select" formControlName="role" required>
                     <option value="" disabled selected>Select your role</option>
-                    <option value="student">Student</option>
-                    <option value="professor">Professor</option>
+                    <option value="Student">Student</option>
+                    <option value="Professor">Professor</option>
                 </select>
             </div>
             <div class="form-check justify-content-center align-items-center mb-4">
