--- a/Client/src/app/navbar/navbar.component.html
+++ b/Client/src/app/navbar/navbar.component.html
@@ -2,12 +2,12 @@
     <div class="container">
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Examee</a>
         <ul class="navbar-nav">
-            <ng-container *ngIf="accountService.currentUser$ | async">
+            <ng-container *ngIf="accountService.currentUser()">
                 <li *appHasRole="['Admin']" class="nav-item">
                     <a class="nav-link" routerLink="/admin" routerLinkActive="active">Dashboard</a>
                 </li>
                 <div *appHasRole="['Student', 'Professor']">
-                    <li *ngIf="(accountService.currentUser$ | async) as user" class="nav-item">
+                    <li *ngIf="(accountService.currentUser()) as user" class="nav-item">
                         <a class="nav-link" routerLink="/{{user.userName}}"><i class="fa-solid fa-user"></i></a>
                     </li>
                 </div>
@@ -15,7 +15,7 @@
                     <a class="nav-link" routerLink="/" routerLinkActive="active" (click)="logout()"><i class="fa-solid fa-right-from-bracket"></i></a>
                 </li>
             </ng-container>
-            <ng-container *ngIf="!(accountService.currentUser$ | async)">
+            <ng-container *ngIf="!(accountService.currentUser())">
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/login" routerLinkActive="active">Sign In</a>
                 </li>
